# confWorks

./: .gitignore  README.md  conformer_landscape.ipynb  demo.ipynb  legacy_setup.py  load_xyz_2_tempalte_sdf.ipynb  pyproject.toml  rdkit-xtb-geomopt.ipynb  setup.py
confworks/: __inity__.py  util.py
data/: molecules.csv  quinine_xtb.sdf  rmsds_matrix.npy
docs/assets/: prediction_demo.ipynb
src/: util.py
